# complex_networks_hw

./: README.md  complex_networks_hw.code-workspace
controlko_bringup/: CMakeLists.txt  package.xml
controlko_bringup/config/: rrbot_controllers.yaml
controlko_bringup/launch/: rrbot.launch.py  rrbot_sim_gazebo_classic.launch.py
controlko_controllers/: CMakeLists.txt  controlko_controllers.xml  displacemnt_controllerにテスト目標値を送る.bash  package.xml
controlko_controllers/include/controlko_controllers/: displacement_controller.hpp  visibility_control.h
controlko_controllers/src/: displacement_controller.cpp
controlko_description/: CMakeLists.txt  package.xml
controlko_description/launch/: view_rrbot.launch.py
controlko_description/rviz/: rrbot.rviz
controlko_description/urdf/: common.xacro  rrbot.urdf.xacro
controlko_description/urdf/rrbot/: rrbot_macro.ros2_control.xacro  rrbot_macro.xacro
controlko_hardware_interface/: CMakeLists.txt  controlko_hardware_interface.xml  package.xml
controlko_hardware_interface/include/controlko_hardware_interface/: controlko_hardware_interface.hpp  dr_denis_rrbot_comms.hpp  visibility_control.h
controlko_hardware_interface/src/: controlko_hardware_interface.cpp
sushi_bot_bringup/: CMakeLists.txt  package.xml
sushi_bot_bringup/config/: sushi_bot_controllers.yaml
sushi_bot_bringup/launch/: sushi_bot.launch.py  sushi_bot_sim_gazebo_classic.launch.py
sushi_bot_description/: CMakeLists.txt  package.xml
sushi_bot_description/launch/: view_sushi_bot.launch.py
sushi_bot_description/rviz/: sushi_bot.rviz
sushi_bot_description/urdf/: common.xacro  sushi_bot.urdf.xacro
sushi_bot_description/urdf/sushi_bot/: puma_robot_macro.xacro  simple_gripper_macro.xacro  stanford_robot_macro.xacro  sushi_bot_macro.ros2_control.xacro  sushi_bot_macro.xacro
sushi_bot_gazebo_plugins/: CMakeLists.txt  package.xml
sushi_bot_gazebo_plugins/src/: pick_and_drop_plugin.cpp
sushi_bot_interfaces/: CMakeLists.txt  package.xml
sushi_bot_interfaces/srv/: PickObject.srv
sushi_bot_task_executor/: CMakeLists.txt  package.xml
sushi_bot_task_executor/src/: task_executor.cpp
sushi_bot_worlds/: CMakeLists.txt  package.xml
sushi_bot_worlds/launch/: launch_world_with_sushi_bot.launch.py
sushi_bot_worlds/models/SalmonSushi/: credit.txt  model.config  model.sdf
sushi_bot_worlds/models/SalmonSushi/meshes/: model.dae
sushi_bot_worlds/worlds/: sushi_pick_and_place.sdf
